--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -4,31 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
+    tools:context=".ListActivity"
     android:orientation="vertical">
-
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kotlin Android Course"
+        android:text="List View"
         android:textSize="24dp"
         android:textColor="@color/black"
         android:textAlignment="center"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         />
-
-    <Button
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="List View"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:background="@color/skyblue"
-        android:textColor="@color/white"
-        android:textAllCaps="false"
-        android:onClick="open_listview"
-        />
+        android:divider="@color/skyblue"
+        android:dividerHeight="1dp"
+        android:id="@+id/listview">
+
+    </ListView>
 
 
 </LinearLayout>
