--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -29,6 +29,17 @@
         android:textAllCaps="false"
         android:onClick="open_listview"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Custom ListView"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@color/skyblue"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:onClick="custom_list"
+        />
 
 
 </LinearLayout>
