--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -53,5 +53,19 @@
         android:onClick="gridview_click"
         />
 
+    <Button
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:text="WebView"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@color/skyblue"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:onClick="webview_click"
+        />
+
+
+
 
 </LinearLayout>
