26-10-2021 Implicit Intent using Camera

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -65,6 +65,18 @@
         android:onClick="webview_click"
         />
 
+    <Button
+        android:layout_width="140dp"
+        android:layout_height="wrap_content"
+        android:text="Implicit Intent"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@color/teal_700"
+        android:textColor="@color/white"
+        android:textAllCaps="false"
+        android:onClick="impl_click"
+        />
+
 
 
 
